--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -1,4 +1,5 @@
 #+OPTIONS: toc:t
+#+LINK: emacswiki http://www.emacswiki.org/emacs/%s
 #+PROPERTY: header-args:shell :results output
 * Why?
 ** Github-hosted repositories
