--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -133,6 +133,16 @@ Default list of commands is dangerous as it uses =--insecure= flag when invoking
    "openssl s_client -connect %h:%p -no_ssl2 -ign_eof")
 #+END_SRC
 * Communications
+** Encryption
+Toggle automatic file encryption/decryption
+#+BEGIN_SRC emacs-lisp
+  (auto-encryption-mode 1)
+#+END_SRC
+** Authentication sources
+I'm not using =.netrc=, just =.authinfo= but encrypted instead of being it in clear-text:
+#+BEGIN_SRC emacs-lisp
+  (setq auth-sources '("~/.authinfo.gpg"))
+#+END_SRC
 ** Stack Exchange
 [[github:vermiculus/sx.el][SX]] provides a versatile experience for the Stack Exchange network within Emacs itself.
 #+BEGIN_SRC emacs-lisp
