--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -419,6 +419,13 @@ By default, will recognize Git repository as Gerrit one only when:
 In other words, will work with =ssh://user@git.eclipse.org:29418/equinox/rt.equinox.p2= out of the box. Working with non-anonymous HTTPS (like =https://user@git.eclipse.org/r/a/equinox/rt.equinox.p2=) will require setting =magit-gerrit-ssh-creds=.
 
 Seems there is no support for anonymous access via =https://git.eclipse.org/r/a/equinox/rt.equinox.p2=.
+* Manage a list of recently opened files
+#+BEGIN_SRC emacs-lisp
+  (require 'recentf)
+  (setq recentf-max-menu-items 100
+        recentf-save-file (expand-file-name ".recentf" user-emacs-directory))
+  (recentf-mode 1)
+#+END_SRC
 * Puppet
 #+BEGIN_SRC emacs-lisp
   (el-get-bundle puppet-mode)
