--- a/.config/emacs/emacs.org
+++ b/.config/emacs/emacs.org
@@ -1390,6 +1390,26 @@ Another option is [[github:kuanyui/copy-as-org-mode]] which allows to copy the c
 #+BEGIN_SRC emacs-lisp
   (setq org-src-fontify-natively t)
 #+END_SRC
+*** Create source code block
+- use =org-babel-demarcate-block= (bound to =C-c C-v d= by default) outside of a code block
+- type =<s= followed by =Tab=
+*** Split source code block
+Split existing source code block
+#+begin_src emacs-lisp :tangle no
+  (setq custom-file (expand-file-name "custom.el" user-emacs-directory))
+  (load custom-file t)
+#+end_src
+
+in two
+
+#+begin_example
+  ,#+begin_src emacs-lisp
+    (setq custom-file (expand-file-name "custom.el" user-emacs-directory))
+  ,#+end_src
+  ,#+begin_src emacs-lisp
+    (load custom-file t)
+  ,#+end_src
+#+end_example
 *** Shell
 #+BEGIN_SRC emacs-lisp
   (require 'ob-shell)
@@ -1436,19 +1456,6 @@ The =:wrap= header argument is used to mark the results of source block evaluati
   ,#+END_SRC
 #+END_SRC
 *** TODO Define initial key bindings
-*** TODO Splitting source code blocks
-Split existing source code block
-#+BEGIN_SRC emacs-lisp :tangle no
-  (setq custom-file (expand-file-name "custom.el" user-emacs-directory))
-  (load custom-file t)
-#+END_SRC
-in two
-#+BEGIN_SRC emacs-lisp :tangle no
-  (setq custom-file (expand-file-name "custom.el" user-emacs-directory))
-#+END_SRC
-#+BEGIN_SRC emacs-lisp :tangle no
-  (load custom-file t)
-#+END_SRC
 ** Exporting
 #+BEGIN_SRC emacs-lisp
   (setq org-html-head-include-default-style nil
