Wrap text with punctation

--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -792,6 +792,11 @@ Originally [[http://ergoemacs.org/emacs/command-frequency.html][Emacs's Command 
     (keyfreq-mode 1)
     (keyfreq-autosave-mode 1))
 #+END_SRC
+* Wrap text with punctation
+#+BEGIN_SRC emacs-lisp
+  (el-get-bundle wrap-region :type github :pkgname "rejeep/wrap-region.el")
+#+END_SRC
+
 * Install other packages
 #+BEGIN_SRC emacs-lisp
   (el-get-bundle org-link-travis :pkgname "manandbytes/org-link-travis"
