--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -254,6 +254,16 @@ Another option is to switch to the built-in GnuTLS integration.
    #+BEGIN_SRC emacs-lisp
      (setq browse-url-browser-function 'browse-url-firefox)
    #+END_SRC
+*** Privacy
+#+BEGIN_SRC emacs-lisp
+  (setq url-user-agent "")
+  (setq url-privacy-level 'paranoid)
+  (url-setup-privacy-info)
+  (setq url-mime-accept-string "text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8 ")
+  (setq url-mime-charset-string nil)
+  (setq url-mime-language-string "en-US,en;q=0.5")
+  (setq url-mime-encoding-string "gzip, deflate")
+#+END_SRC
 ** Manually explore and test HTTP REST webservices
    #+BEGIN_SRC emacs-lisp
      (el-get-bundle restclient)
