--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -426,6 +426,14 @@ Seems there is no support for anonymous access via =https://git.eclipse.org/r/a/
         recentf-save-file (expand-file-name ".recentf" user-emacs-directory))
   (recentf-mode 1)
 #+END_SRC
+* Fonts
+** Default font
+#+BEGIN_SRC emacs-lisp
+  (set-face-attribute 'default nil
+                      :family "Ubuntu Mono derivative Powerline"
+                      :height 120)
+#+END_SRC
+** TODO Build face's attributes only once depending on system-type
 * Puppet
 #+BEGIN_SRC emacs-lisp
   (el-get-bundle puppet-mode)
