--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -427,6 +427,10 @@ Seems there is no support for anonymous access via =https://git.eclipse.org/r/a/
   (recentf-mode 1)
 #+END_SRC
 * Fonts
+** TODO Use font Awesome in the mode line
+- [[http://fontawesome.io/][Font Awesome, the iconic font and CSS toolkit]]
+- [[http://endlessparentheses.com/manually-choose-a-fallback-font-for-unicode.html][Manually Choose a Fallback Font for Unicode · Endless Parentheses]]
+- [[https://gist.github.com/arnested/afd421c89a68b874e1c0][Using Font Awesome in the Emacs mode line]]
 ** Default font
 #+BEGIN_SRC emacs-lisp
   (set-face-attribute 'default nil
