--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -452,6 +452,15 @@ By default only parentheses are dimmed, customize option paren-face-regexp if yo
                       :height 120)
 #+END_SRC
 ** TODO Build face's attributes only once depending on system-type
+* Docker
+#+BEGIN_SRC emacs-lisp
+  (el-get-bundle spotify/dockerfile-mode
+    (add-to-list 'auto-mode-alist '("Dockerfile" . dockerfile-mode)))
+#+END_SRC
+TRAMP integration for Docker containers
+#+BEGIN_SRC emacs-lisp
+  (el-get-bundle emacs-pe/docker-tramp.el)
+#+END_SRC
 * Puppet
 #+BEGIN_SRC emacs-lisp
   (el-get-bundle puppet-mode)
