--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -57,7 +57,7 @@ By default, Emacs saves backup files (the files ending with =~=) in the current 
   (el-get-bundle with-eval-after-load-feature)
 #+END_SRC
 Install essential Debian packages:
-#+BEGIN_SRC emacs-lisp
+#+BEGIN_SRC emacs-lisp :tangle no
   (dolist (package '(make texinfo))
     (el-get-bundle apt-get:package))
 #+END_SRC
@@ -672,8 +672,11 @@ All files in a default location to look for Org files will be used for agenda di
 #+END_SRC
 *** Debian package
 To add link to Debian package, use =deb:= link type followed by package's name, i.e. =deb:python3-minimal=. Opening such link will show package's details with =apt-utils-show-package= (from =apt-utils= feature provided by [[deb:debian-el]] package).
-#+BEGIN_SRC emacs-lisp
+#+BEGIN_SRC emacs-lisp :tangle no
   (el-get-bundle apt-get:debian-el)
+#+END_SRC
+
+#+BEGIN_SRC emacs-lisp
   (with-eval-after-load-feature (org)
     (defun org-deb-open (package)
       (if (require 'apt-utils nil 'noerror)
@@ -918,7 +921,7 @@ Not sure if it makes sense to highlight an entire expression on a permanent basi
   (add-to-list 'auto-mode-alist '("\\.aj$" . java-mode))
 #+END_SRC
 Debian provides a number of different JDK implementations, for now I don't care and will require a virtual package [[deb:java-sdk]] (which means 'any installed Java SDK'):
-#+BEGIN_SRC emacs-lisp
+#+BEGIN_SRC emacs-lisp :tangle no
   (el-get-bundle apt-get:java-sdk)
 #+END_SRC
 Automatically open =.class= files with =javap=:
