[org] Export to MediaWiki

--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -871,6 +871,9 @@ in two
 #+BEGIN_SRC emacs-lisp :tangle no
   (load custom-file t)
 #+END_SRC
+** Exporting
+*** TODO MediaWiki
+[[github:tomalexander/orgmode-mediawiki]]
 * Legacy configuration
 #+BEGIN_SRC emacs-lisp
   ;; yes-or-no -> y-or-n
