--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -520,10 +520,22 @@ While this face is intended to be used with Lisp modes, it also works with other
 
 By default only parentheses are dimmed, customize option paren-face-regexp if you also want to dim brackets or braces. If you want to use a differnt regexp in different major-modes, then use a the mode hook to set the buffer local value.
 ** Default font
+*** Microsoft Windows and Cygwin
+On Windows/Cygwin, use =Source Code Pro=:
 #+BEGIN_SRC emacs-lisp
-  (set-face-attribute 'default nil
-                      :family "Ubuntu Mono derivative Powerline"
-                      :height 120)
+  (when (member system-type '(windows-nt cygwin))
+    (set-face-attribute 'default nil :font "Source Code Pro-10"))
+#+END_SRC
+**** TODO More system-specific settings
+#+BEGIN_SRC emacs-lisp
+  (eq system-type 'cygwin)
+  ;; use system-configuration if more info required
+#+END_SRC
+*** Linux
+On Debian, use =Liberation Mono=:
+#+BEGIN_SRC emacs-lisp
+  (when (eq system-type 'gnu/linux)
+    (set-face-attribute 'default nil :family "Liberation Mono" :height 105))
 #+END_SRC
 ** TODO Build face's attributes only once depending on system-type
 * TODO Vagrant
