--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -872,6 +872,13 @@ in two
   (load custom-file t)
 #+END_SRC
 ** Exporting
+#+BEGIN_SRC emacs-lisp
+  (setq org-html-head-include-default-style nil
+        org-html-head-include-scripts nil
+        org-html-html5-fancy t
+        org-html-htmlize-output-type 'css)
+#+END_SRC
+
 *** TODO MediaWiki
 [[github:tomalexander/orgmode-mediawiki]]
 * Legacy configuration
