--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -1001,6 +1001,10 @@ Automatically open =.class= files with =javap=:
 #+BEGIN_SRC emacs-lisp :tangle no
   (add-to-list 'magic-mode-alist '("^\xCA\xFE\xBA\xBE" . javap-mode))
 #+END_SRC
+** Eclipse integration
+#+BEGIN_SRC emacs-lisp
+  (el-get-bundle eclim)
+#+END_SRC
 * Lisp
 Navigate and edit LISP code with [[github:abo-abo/lispy][Oleh Krehel's lispy]] package:
 #+BEGIN_SRC emacs-lisp
