--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -1005,6 +1005,10 @@ Automatically open =.class= files with =javap=:
 #+BEGIN_SRC emacs-lisp
   (el-get-bundle eclim)
 #+END_SRC
+* Android
+#+BEGIN_SRC emacs-lisp
+  (el-get-bundle android-mode)
+#+END_SRC
 * Lisp
 Navigate and edit LISP code with [[github:abo-abo/lispy][Oleh Krehel's lispy]] package:
 #+BEGIN_SRC emacs-lisp
