--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -872,14 +872,23 @@ Another option is [[github:kuanyui/copy-as-org-mode]] which allows to copy the c
   (setq org-src-fontify-natively t)
 #+END_SRC
 *** Shell
+#+BEGIN_SRC emacs-lisp
+  (require 'ob-shell)
+  (add-to-list 'org-babel-load-languages '(shell . t))
+#+END_SRC
+By default,
+src_emacs-lisp{(pp org-babel-shell-names)} {{{results(=("sh" "bash" "csh" "ash" "dash" "ksh" "mksh" "posh")=)}}}
+are supported. To change these, use =org-babel-shell-names=:
+#+BEGIN_SRC emacs-lisp
+  (add-to-list 'org-babel-shell-names "zsh")
+#+END_SRC
+adds the [[http://www.zsh.org/][Z shell]] to the list of names of shell supported by Babel shell code blocks.
+
 There are two (at least) modes to work with shell code snippets:
 - =shell-mode=, major mode for interacting with an inferior shell
 - =sh-mode= (=shell-script-mode= is an alias), major mode for editing shell scripts
 
 The latter one should be used for source code blocks, i.e. =#+BEGIN_SRC sh=, and add it to the list of languages which can be evaluated:
-#+BEGIN_SRC emacs-lisp
-  (add-to-list 'org-babel-load-languages '(shell . t))
-#+END_SRC
 *** TODO Navigation between blocks
 #+BEGIN_SRC emacs-lisp
   (el-get-bundle hydra)
@@ -890,7 +899,7 @@ The latter one should be used for source code blocks, i.e. =#+BEGIN_SRC sh=, and
 #+END_SRC
 *** TODO Mark the results of source block evaluation with specific mode
 #+BEGIN_QUOTE
-The :wrap header argument is used to mark the results of source block evaluation. The header argument can be passed a string that will be appended to =#+BEGIN_= and =#+END_=, which will then be used to wrap the results.
+The =:wrap= header argument is used to mark the results of source block evaluation. The header argument can be passed a string that will be appended to =#+BEGIN_= and =#+END_=, which will then be used to wrap the results.
 #+END_QUOTE
 #+BEGIN_SRC org
   ,#+BEGIN_SRC sh :wrap "_SRC diff"
